--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,8 @@
 		
 		<mysql.version>5.1.47</mysql.version>
 		<slf4j.version>1.7.25</slf4j.version>
-		<zk.version>0.10</zk.version>
+		<zookeeper.version>3.4.13</zookeeper.version>
+
 		<junit.version>4.12</junit.version>
 	</properties>
 
@@ -180,19 +181,28 @@
             <optional>true</optional>
         </dependency>
         
-        <!-- zk -->
+        <!-- zookeeper -->
 		<dependency>
-			<groupId>com.101tec</groupId>
-			<artifactId>zkclient</artifactId>
-			<version>${zk.version}</version>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>${zookeeper.version}</version>
+            <optional>true</optional>
 			<exclusions>
 				<exclusion>
 					<artifactId>log4j</artifactId>
 					<groupId>log4j</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty</artifactId>
+				</exclusion>
 			</exclusions>
-            <optional>true</optional>
 		</dependency>
+
 		<!-- spring-redis -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
